# mercurius-mcp-py

./: .gitignore  README.md  notes.txt  pyproject.toml  requirements.txt  start_server.py
scripts/: test_pipeline.py  test_regex_extraction.py  test_vsac.py
src/: main.py  server.py  setup_env.py
src/config/: settings.py
src/models/: omop_models.py  vsac_models.py
src/rag_resources/: OMOP_CDM.xml  schema.py
src/resources/: config.py
src/services/: cql_parser.py  database_service.py  db_validator.py  dependency_analyzer.py  json_utils.py  library_resolver.py  llm_factory.py  llm_services.py  mcp_client_simplified.py  sql_corrector.py  sql_generator.py  sql_validator.py  utils.py  vsac_services.py  workflow_llm.py
src/tools/: correct_sql_errors.py  env_status_tool.py  extract_valuesets_with_omop.py  fetch_vasc.py  finalize_sql.py  generate_omop_sql.py  lookup_loinc_code.py  lookup_snomed_code.py  map_vsac_to_omop.py  parse_cql_structure.py  parse_nl_to_cql.py  translate_cql_to_sql_complete.py  validate_generated_sql.py
src/utils/: config.py  env_helpers.py  error_handlers.py  extractors.py  helpers.py  omop_mapping.py  parameter_normalizer.py
